tests/NormalTests/paczka1/fuzzy1/62563933.err
Error in line 6: HvqS S269 23,9
Error in line 7: HvqS S275 11,3
Error in line 9: HvqS S170 0,9
Error in line 20: gO4oGo1H S269 48,6
Error in line 31: gO4oGo1H S170 16,3
Error in line 28: UBv S275 237,8
